--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.5",
+    "framer-motion": "^12.4.3",
     "install": "^0.13.0",
     "npm": "^11.1.0",
     "react": "^19.0.0",
